# slack-ai-agent-starter

./: .clinerules  .editorconfig  .env.example  .pre-commit-config.yaml  .tool-versions  CLAUDE.md  Dockerfile  Dockerfile.langgraph  Dockerfile.web  Makefile  Procfile  README.md  docker-compose.yaml  docker-entrypoint.sh  langgraph.json  pyproject.toml  renovate.json  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: design.md  issue-command.md  powerpoint_agent.md  setup-guide.md
docs/design/: news_frontpage_agent_design.md  powerpoint_agent_design.md  smart_brief_generation_agent_design.md  sync_url_research_agent_design.md  url_research_agent_design.md
examples/: powerpoint_example.py
slack_ai_agent/: README.md
slack_ai_agent/agents/: __init__.py  agent.py  configuration.py  deep_research_agent.py  helpers.py  marp_generation_agent.py  news_frontpage_agent.py  powerpoint_agent.py  powerpoint_generation_agent.py  powerpoint_requirements_agent.py  research_agent.py  simple_agent.py  simple_long_term_memory_agent.py  smart_brief_generation_agent.py  store.py  summarize_agent.py  sync_deep_research_agent.py  types.py  url_to_twitter_agent.py
slack_ai_agent/agents/base/: __init__.py  agent.py
slack_ai_agent/agents/cron/: greeting.py
slack_ai_agent/agents/multi_agents/: supervisor.py
slack_ai_agent/agents/prompts/: deep_research_final_section_writer_instructions.py  deep_research_planner_query_writer_instructions.py  deep_research_query_writer_instructions.py  deep_research_report_planner_instructions.py  deep_research_section_grader_instructions.py  deep_research_section_writer_instructions.py  marp_outline_prompt.py  marp_slide_content_prompts.py  powerpoint_outline_prompt.py  powerpoint_requirements_prompt.py  powerpoint_slide_content_prompts.py  query_writer_instructions.py  reflaction_instructions.py  summarizer_instructions.py
slack_ai_agent/agents/security/: auth.py
slack_ai_agent/agents/tools/: __init__.py  create_tools.py  deep_research.py  firecrawl_scrape.py  github.py  github_tools.py  google.py  marp_generation.py  memory.py  perplexity_search.py  powerpoint.py  powerpoint_generation.py  powerpoint_requirements.py  python.py  research.py  search.py  slack.py  summarize.py  tavily_search.py  twitter.py  vision.py  youtube.py
slack_ai_agent/agents/url_research/: __init__.py  content_fetcher.py  graph_builder.py  models.py  query_generator.py  report_compiler.py  search.py  section_writer.py  sync_url_research_agent.py  utils.py
slack_ai_agent/agents/utils/: __init__.py  config.py  memory.py  models.py  nodes.py  state.py  store.py  tools.py  types.py  utils.py
slack_ai_agent/slack/: __init__.py  app.py  app_mention_handler.py  bot_handler.py  event_handlers.py  message_handlers.py  utils.py
slack_ai_agent/slack/handler/: __init__.py  action_handlers.py  conversation.py  event_handlers.py  message_handlers.py  slash_command_handlers.py
tests/: conftest.py
tests/slack/handler/: test_action_handlers.py  test_event_handlers.py  test_message_handlers.py
