[tool.poetry]
name = "slack-ai-agent-starter"
version = "0.1.0"
description = "Slack AI Agent Starter Kit"
authors = ["kyaukyuai <y.kakui@gmail.com>"]
repository = "https://github.com/kyaukyuai/slack-ai-agent-starter"
keywords = ["slack", "ai", "bot", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.11",
]
packages = [
    { include = "slack_ai_agent", from = "." }
]

[tool.poetry.dependencies]
python = "==3.12.9"
slack-bolt = "1.22.0"
python-dotenv = "1.0.1"
langchain_anthropic = "==0.3.9"
langchain_core = "==0.3.43"
langchain_openai = "==0.3.8"
langchain_community = "==0.3.19"
langgraph-sdk = "0.1.55"
tavily-python = "0.5.1"
hupper = "1.12.1"
langgraph = "0.2.76"
tiktoken = "0.9.0"
beautifulsoup4 = "4.13.3"
slack-sdk = "3.34.0"
youtube-search = "2.1.2"
langchain-experimental = "0.3.4"
firecrawl-py = "1.13.5"
langchain-arcade = "1.1.0"
pytz = "2025.1"

[tool.poetry.group.dev.dependencies]
ruff = "0.9.10"
pre-commit = "4.1.0"
mypy = "1.15.0"
langgraph-cli = {extras = ["inmem"], version = "0.1.75"}
pytest = "8.3.5"
pytest-asyncio = "0.25.3"
pytest-mock = "3.14.0"
pytest-cov = "5.0.0"

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
disable_error_code = "import-not-found"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
