[tool.poetry]
name = "slack-ai-agent-starter"
version = "0.1.0"
description = "Slack AI Agent Starter Kit"
authors = ["kyaukyuai <y.kakui@gmail.com>"]
repository = "https://github.com/kyaukyuai/slack-ai-agent-starter"
keywords = ["slack", "ai", "bot", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.11",
]
packages = [
    { include = "slack_ai_agent", from = "." }
]

[tool.poetry.dependencies]
python = "==3.12.11"
slack-bolt = "1.23.0"
python-dotenv = "1.1.1"
langchain_anthropic = "==0.3.17"
langchain_core = "==0.3.69"
langchain_openai = "==0.3.28"
langchain_community = "==0.3.27"
langgraph-sdk = "0.1.73"
tavily-python = "0.5.4"
hupper = "1.12.1"
langgraph = "==0.3.34"
tiktoken = "0.9.0"
beautifulsoup4 = "4.13.4"
slack-sdk = "3.36.0"
youtube-search = "2.1.2"
langchain-experimental = "0.3.4"
firecrawl-py = "1.17.0"
langchain-arcade = "1.3.1"
pytz = "2025.2"
claude-code-sdk = "0.0.14"
requests = "2.32.4"

[tool.poetry.group.dev.dependencies]
ruff = "0.9.10"
pre-commit = "4.2.0"
mypy = "1.17.0"
langgraph-cli = {extras = ["inmem"], version = "0.1.89"}
pytest = "8.4.1"
pytest-asyncio = "0.25.3"
pytest-mock = "3.14.1"
pytest-cov = "5.0.0"

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
disable_error_code = "import-not-found"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
